--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "customize-cra": "^1.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.54.4",
     "sass-resources-loader": "^2.2.5"
