--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "svgo": "svgo -f ./src/icons/svg",
+    "start": "cross-env BROWSER=none PORT=3080 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
@@ -41,10 +42,12 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "postcss-px-to-viewport": "^1.1.1",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.54.4",
-    "sass-resources-loader": "^2.2.5"
+    "sass-resources-loader": "^2.2.5",
+    "svg-sprite-loader": "^6.0.11"
   }
 }
