--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 .idea
+yarn.lock
+pnpm-lock.yaml
+package-lock.json
 
 # dependencies
 /node_modules
