--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "scripts": {
     "svgo": "svgo -f ./src/icons/svg",
     "preview": "http-server ./build",
-    "start": "cross-env BROWSER=none PORT=3080 react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "cross-env BROWSER=none PORT=3080 craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,13 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.5",
+    "craco-plugin-svg-sprite": "^1.0.0",
+    "craco-sass-resources-loader": "^1.1.0",
     "cross-env": "^7.0.3",
-    "customize-cra": "^1.0.0",
     "http-server": "^14.1.1",
-    "postcss-px-to-viewport": "^1.1.1",
-    "react-app-rewired": "^2.2.1",
+    "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "sass": "^1.54.4",
-    "sass-resources-loader": "^2.2.5",
     "svg-sprite-loader": "^6.0.11"
   }
 }
